--- a/main_site/index.html
+++ b/main_site/index.html
@@ -186,10 +186,10 @@
                         We provide three kinds of demo so that the readers can play around our model!
                         <br>
 
-                        <li><a href="https://biboamy.github.io/instrument-recognition/demo.html">Instrument Activity Detection</a> </li>
+                        <li><a href="https://biboamy.github.io/instrument-demo/demo.html">Instrument Activity Detection</a> </li>
                         <p>Here we provide a website to demo instrument activity detection for some songs we choose.</p>
 
-                        <li><a href="https://biboamy.github.io/instrument-streaming/">Automatic Music Transcription</a> </li>
+                        <li><a href="https://biboamy.github.io/streaming-demo/streaming/">Automatic Music Transcription</a> </li>
                         <p>For thoses who are interested in our piano roll prediction result, we provide a demo website on some songs we choose.</p>
 
                         <li><a href="">Playground - Automatic Music</a> </li>
