--- a/main_site/index.html
+++ b/main_site/index.html
@@ -189,7 +189,7 @@
                         <li><a href="https://biboamy.github.io/instrument-demo/demo.html">Instrument Activity Detection</a> </li>
                         <p>Here we provide a website to demo instrument activity detection for some songs we choose.</p>
 
-                        <li><a href="https://biboamy.github.io/streaming-demo/streaming/">Automatic Music Transcription</a> </li>
+                        <li><a href="https://biboamy.github.io/instrument-streaming/index.html">Automatic Music Transcription</a> </li>
                         <p>For thoses who are interested in our piano roll prediction result, we provide a demo website on some songs we choose.</p>
 
                         <li><a href="">Playground - Automatic Music</a> </li>
