--- a/main_site/index.html
+++ b/main_site/index.html
@@ -57,10 +57,9 @@
                         <p>[<a href="https://github.com/biboamy/instrument-streaming">Github</a>]
                             [<a href="https://arxiv.org/pdf/1811.01143.pdf">Paper</a>]
                             [<a href="https://musicai.citi.sinica.edu.tw/">MACLab</a>]
-                            [<a href="https://biboamy.github.io/instrument-recognition/demo.html">Demo-instrument</a>]
-                            [<a href="https://biboamy.github.io/instrument-streaming/website/">Demo-transcription</a>]
-                            [<a href="">Demo-interactive</a>]
-                            [<a href="">Poster</a>]</p>
+                            [<a href="https://biboamy.github.io/instrument-demo/demo.html">Demo-instrument</a>]
+                            [<a href="https://biboamy.github.io/streaming-demo/streaming/">Demo-transcription</a>]
+                            [<a href="https://biboamy.github.io/streaming-demo/source/multitask learning-icassp2019-poster.pdf">Poster</a>]</p>
                     </div>                    
                 </section>
 
